--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        classpath 'com.amplifyframework:amplify-tools-gradle-plugin:1.0.2'
+        classpath 'com.google.gms:google-services:4.3.8'
     }
 }
 
@@ -22,3 +25,5 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply plugin: 'com.amplifyframework.amplifytools'
