--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,14 @@ dependencies {
     implementation 'org.apache.commons:commons-io:1.3.2'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
+//---------------------------------------------------------------
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support:design:28.0.0'
+    api 'com.google.android.material:material:1.1.0-alpha06'
+
 }
