--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
     api 'com.google.android.material:material:1.1.0-alpha06'
+//  for   splash page
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
+
+
 
 }
