--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.confirmSignUpPage" />
-       <activity android:name=".donate.Donate" />
-        <activity android:name=".condition.Condition" />
-        <activity android:name=".orders.Orders" />
         <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -33,3 +30,4 @@
 
         </activity>
     </application>
+</manifest>
