--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CleanLand">
-        <activity android:name=".activities.DonatePage"></activity>
+
+        <activity android:name=".activities.MyOrders"></activity>
+        <activity android:name=".activities.DonatePage" />
         <activity android:name=".activities.OrderPage" />
         <activity android:name=".activities.SplashActivity">
             <intent-filter>
