--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CleanLand">
-        <activity android:name=".activities.MyOrders" />
         <activity android:name=".activities.userDonations" />
         <activity android:name=".activities.DonatePage" />
         <activity android:name=".activities.ProfileActivity" />
         <activity android:name=".activities.OrderPage" />
+
+        <activity android:name=".activities.MyOrders">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
 
         <activity android:name=".activities.SplashActivity">
             <intent-filter>
