--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
 
     implementation 'com.google.android.libraries.places:places:2.4.0'
+    api 'com.google.android.material:material:1.1.0-alpha06'
+
 
 
 }
