--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
         </activity>
         <activity android:name=".activities.MyOrders" />
         <activity android:name=".activities.userDonations" />
-        <activity android:name=".activities.DonatePage" />
+        <activity android:name=".activities.DonationActivity" />
+
         <activity android:name=".activities.ProfileActivity" />
         <activity android:name=".activities.OrderPage" />
         <activity android:name=".activities.SplashActivity" />
