--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,11 +37,16 @@
             android:label="@string/title_activity_maps">
 
         </activity>
-        <activity android:name=".activities.MyOrders" />
-        <activity android:name=".activities.userDonations" />
-        <activity android:name=".activities.DonatePage" />
-        <activity android:name=".activities.ProfileActivity" />
-        <activity android:name=".activities.OrderPage" />
+        <activity android:name=".activities.MyOrders"
+            android:parentActivityName=".activities.MainActivity"/>
+        <activity android:name=".activities.userDonations"
+            android:parentActivityName=".activities.MainActivity"/>
+        <activity android:name=".activities.DonatePage"
+            android:parentActivityName=".activities.MainActivity"/>
+        <activity android:name=".activities.ProfileActivity"
+            android:parentActivityName=".activities.MainActivity"/>
+        <activity android:name=".activities.OrderPage"
+            android:parentActivityName=".activities.MainActivity"/>
         <activity android:name=".activities.SplashActivity" />
         <activity android:name=".activities.confirmSignUpActivity" />
         <activity
