changed main activity luncher

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,27 +33,28 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".activities.MapsActivity"
-            android:label="@string/title_activity_maps">
+            android:name=".activities.MapsActivity">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
 
         <activity android:name=".activities.MyOrders"
             android:parentActivityName=".activities.MainActivity"/>
         <activity android:name=".activities.userDonations"
             android:parentActivityName=".activities.MainActivity"/>
-        <activity android:name=".activities.DonatePage"
-            android:parentActivityName=".activities.MainActivity"/>
+
         <activity android:name=".activities.ProfileActivity"
             android:parentActivityName=".activities.MainActivity"/>
         <activity android:name=".activities.OrderPage"
             android:parentActivityName=".activities.MainActivity"/>
 
-        <activity android:name=".activities.SplashActivity" />
+        <activity android:name=".activities.SplashActivity">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+
         <activity android:name=".activities.confirmSignUpActivity" />
         <activity
             android:name=".activities.LoginActivity"
