fixed login page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,11 +48,13 @@
         <activity android:name=".activities.OrderPage"
             android:parentActivityName=".activities.MainActivity"/>
 
-        <activity android:name=".activities.SplashActivity">
+        <activity android:name=".activities.SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+
         </activity>
 
         <activity android:name=".activities.confirmSignUpActivity" />
