--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CleanLand">
+        android:theme="@style/Theme.CleanLand"
+        >
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -40,6 +41,7 @@
 
         <activity android:name=".activities.MyOrders"
             android:parentActivityName=".activities.MainActivity"/>
+
         <activity android:name=".activities.userDonations"
             android:parentActivityName=".activities.MainActivity"/>
 
@@ -47,8 +49,10 @@
             android:parentActivityName=".activities.MainActivity"/>
         <activity android:name=".activities.OrderPage"
             android:parentActivityName=".activities.MainActivity"/>
+        <activity android:name=".activities.DonationActivity"/>
 
         <activity android:name=".activities.SplashActivity">
+
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
