--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,7 @@
         <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.SignUpActivity" />
+        <activity android:name=".activities.SignUpActivity"   android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".activities.MainActivity" >
 
         </activity>
