--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cleanland">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -18,9 +17,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light"
-        >
-
+        android:theme="@style/Theme.AppCompat.Light">
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -33,45 +30,40 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <activity android:name=".activities.MapsActivity"></activity>
         <activity
-            android:name=".activities.MapsActivity">
-
-
-        </activity>
-
-        <activity android:name=".activities.MyOrders"
-            android:parentActivityName=".activities.MainActivity"/>
-
-
-        <activity android:name=".activities.userDonations"
-            android:parentActivityName=".activities.MainActivity"/>
-        <activity android:name=".activities.OffersActivity"
-            android:parentActivityName=".activities.MainActivity"/>
-        <activity android:name=".activities.ProfileActivity"
-            android:parentActivityName=".activities.MainActivity"/>
-        <activity android:name=".activities.OrderPage"
-            android:parentActivityName=".activities.MainActivity"/>
-        <activity android:name=".activities.DonationActivity"
-            android:parentActivityName=".activities.MainActivity"/>
-
-        <activity android:name=".activities.SplashActivity"
+            android:name=".activities.MyOrders"
+            android:parentActivityName=".activities.MainActivity" />
+        <activity
+            android:name=".activities.userDonations"
+            android:parentActivityName=".activities.MainActivity" />
+        <activity
+            android:name=".activities.OffersActivity"
+            android:parentActivityName=".activities.MainActivity" />
+        <activity
+            android:name=".activities.ProfileActivity"
+            android:parentActivityName=".activities.MainActivity" />
+        <activity
+            android:name=".activities.OrderPage"
+            android:parentActivityName=".activities.MainActivity" />
+        <activity
+            android:name=".activities.DonationActivity"
+            android:parentActivityName=".activities.MainActivity" />
+        <activity
+            android:name=".activities.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
-
-        <activity android:name=".activities.confirmSignUpActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".activities.confirmSignUpActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.SignUpActivity"   android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".activities.MainActivity" >
-
-        </activity>
+        <activity
+            android:name=".activities.SignUpActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.MainActivity"></activity>
     </application>
 
 </manifest>
