--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light">
-
+        <activity android:name=".activities.Details"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -31,7 +31,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".activities.MapsActivity"></activity>
+        <activity android:name=".activities.MapsActivity" />
         <activity
             android:name=".activities.MyOrders"
             android:parentActivityName=".activities.MainActivity" />
@@ -41,7 +41,8 @@
         <activity
             android:name=".activities.OffersActivity"
             android:parentActivityName=".activities.MainActivity" />
-        <activity android:name=".activities.PointsActivity"
+        <activity
+            android:name=".activities.PointsActivity"
             android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.ProfileActivity"
@@ -70,7 +71,7 @@
         <activity
             android:name=".activities.SignUpActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.MainActivity"></activity>
+        <activity android:name=".activities.MainActivity" />
     </application>
 
 </manifest>
